--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,5 @@ ENVELOPE_FILTER_ORDER=4
 STATISTICS_WINDOW_SIZE=1024  # For windowed statistics (future feature)
 
 # Server configuration
-SERVER_NAME=Machinery Diagnostics
-SERVER_VERSION=1.0.0
+SERVER_NAME=Predictive Maintenance
+SERVER_VERSION=0.2.0
