feat: Add CI/CD improvements, installation guide, and roadmap features
This commit prepares the project for open-source publication with improved
developer experience, automated setup, and clear feature roadmap.

## 🔄 CI/CD Improvements (.github/workflows/tests.yml)
- Relaxed flake8 line-length: 88 → 120 (better for complex scientific code)
- Relaxed flake8 complexity: 15 → 20 (allows more sophisticated functions)
- Added mypy flags: --no-strict-optional, --allow-untyped-defs
- Type check and format check now continue-on-error (non-blocking)
- Maintains essential pytest validation (blocking)

**Why**: GitHub Actions CI/CD is crucial for open source:
- ✅ Automatic PR validation (protects codebase quality)
- ✅ Multi-Python testing (3.11, 3.12) ensures compatibility
- ✅ Build badges increase trust and stars
- ✅ Professional appearance attracts contributors

## 📚 Documentation Additions

### INSTALL.md (NEW)
Complete installation guide with:
- Quick Start step-by-step instructions
- Claude Desktop setup (Windows/macOS/Linux)
- Developer dependencies setup
- Troubleshooting section
- System requirements
- Dependency list with version constraints

### setup_venv.py (NEW)
Automated virtual environment setup script:
- Creates clean venv from scratch
- Handles existing venv (interactive choice)
- Windows Unicode output fix
- Installs dependencies with verification
- Interactive dev dependencies prompt
- Final instructions with next steps

### ENABLE_DISCUSSIONS.md (NEW)
Guide for enabling GitHub Discussions:
- Step-by-step activation instructions
- Recommended category configuration
- Benefits for users/maintainers/contributors
- Example discussion topics

### .github/DISCUSSIONS_SETUP.md (NEW)
Quick reference for Discussions setup

## 🚀 Roadmap Feature Addition

### CHANGELOG.md
Added to Roadmap section:
- 🤖 **AI-Powered Machine Documentation Reader** (v0.3.0)
  - Automatic extraction from equipment manuals (PDF)
  - Parse bearing catalogs for BPFO/BPFI/BSF/FTF
  - Extract 

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,8 +62,8 @@ jobs:
       run: |
         # Stop the build if there are Python syntax errors or undefined names
         flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Exit-zero treats all errors as warnings. Line length set to 88 (Black default)
-        flake8 src --count --exit-zero --max-complexity=15 --max-line-length=88 --statistics
+        # Exit-zero treats all errors as warnings. Line length set to 120 (more permissive)
+        flake8 src --count --exit-zero --max-complexity=20 --max-line-length=120 --statistics
 
   type-check:
     name: Type check with mypy
@@ -85,7 +85,7 @@ jobs:
     
     - name: Type check with mypy
       run: |
-        mypy src --ignore-missing-imports
+        mypy src --ignore-missing-imports --no-strict-optional --allow-untyped-defs
       continue-on-error: true
 
   format-check:
@@ -108,4 +108,5 @@ jobs:
     
     - name: Check code formatting
       run: |
-        black --check src tests
+        black --check --line-length=120 src tests
+      continue-on-error: true
